{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 92,
  "lineage": "e742e7cc-05c1-ee52-7027-e7b43b9fc534",
  "resources": [
    {
      "module": "module.compute_eu",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:263274769945:security-group/sg-048ecf4f3ba09729d",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-048ecf4f3ba09729d",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-08fbb1abf79b8e960"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute_eu",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:263274769945:vpc/vpc-08fbb1abf79b8e960",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d3171eb9be3e99b3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-83bd9ae5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fbb1abf79b8e960",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0883d2713a67ec435",
            "owner_id": "263274769945"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute_us",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263274769945:security-group/sg-0b58230b195e1a3a4",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0b58230b195e1a3a4",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03fb27c1460a27b2a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute_us",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263274769945:vpc/vpc-03fb27c1460a27b2a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f944bafe3f5d5f6d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-570fbb2d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03fb27c1460a27b2a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d6bcec472007e0dc",
            "owner_id": "263274769945"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}